--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: haven,
     jsonlite,
-    readxl
+    tibble,
+    readxl,
+    writexl
 RoxygenNote: 7.1.0
