--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(read_labelled)
 export(write_labelled)
+export(zap_na)
+export(zap_values)
 importFrom(haven,labelled)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
